# cftsolver

./: .gitignore  CMakeLists.txt  README.md  lattice3d.cc  pendulum.cc
Python/: derivatives.py
Source/: a.out  main.cpp
Source/EulerLagrange/: euler_lagrange.cpp  euler_lagrange.h
Source/Fields/: CMakeLists.txt  fields.cpp  fields.h  lattice.cc
Source/Rendering/: render.h
include/: euler_lagrange.h  fields.h
src/: euler_lagrange.cpp  fields.cpp  render.cpp
test/: a.out  cftsolver.cpp  compile_main.sh  eulerlagrange.cpp  fields.cpp  fields.h  main  main.cpp  render.cpp  tri
test/include/glad/: glad.h
test/src/: glad.c
